minor fixin spacing at home and adding some floating animation

--- a/src/assets/sass/containers/home/_home.scss
+++ b/src/assets/sass/containers/home/_home.scss
@@ -133,7 +133,7 @@
     .home-wrapper {
         
         .hero-section {
-            margin-block: 15rem;
+            margin: 6rem 0 10rem;
             .hero-text {
                 @include font-display-2;
                 text-align: center;
