--- a/src/assets/sass/globals/_layout.scss
+++ b/src/assets/sass/globals/_layout.scss
@@ -187,3 +187,27 @@ body {
         @include indicator-active;
     }
 }
+
+.flotate {
+    animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-3px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
+.hover-enlarge{
+    transition: transform .95s;
+}
+
+.hover-enlarge:hover {
+    transform: scale(1.025);
+}
